test/importers/invalid/requires_column_header_importer.rb
class RequiresColumnHeaderImporter < CSVParty
  column :product, as: :boolean
end
